services/unused/registry/deployment.yml
---
# Source: docker-registry/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-docker-registry
  namespace: registry
  labels:
    app: docker-registry
    chart: docker-registry-1.9.1
    release: release-name
    heritage: Tiller
spec:
  selector:
    matchLabels:
      app: docker-registry
      release: release-name
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: docker-registry
        release: release-name
      annotations:
        checksum/config: 433b1deb8e148d92a6dbc67df307fe62285ea38c5743b042aa1e4092e769992b
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
        - name: docker-registry
          image: "registry:2.7.1"
          imagePullPolicy: IfNotPresent
          command:
          - /bin/registry
          - serve
          - /etc/docker/registry/config.yml
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
          resources:
            limits:
              cpu: 400m
              memory: 256M
            requests:
              cpu: 100m
              memory: 128M

          volumeMounts:
            - name: data
              mountPath: /var/lib/registry/
            - name: "release-name-docker-registry-config"
              mountPath: "/etc/docker/registry"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: release-name-docker-registry
        - name: release-name-docker-registry-config
          configMap:
            name: release-name-docker-registry-config
